<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/item_add_city"
            android:checked="false"
            android:icon="@drawable/ic_add_circle_outline_white_36dp"
            android:title="@string/add_city" />
        <item
            android:id="@+id/item_manage_city"
            android:checked="false"
            android:icon="@drawable/ic_location_city_white_36dp"
            android:title="@string/manage_city" />
        <item
            android:id="@+id/item_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_white_36dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/item_share"
            android:checked="false"
            android:icon="@drawable/ic_share_white_36dp"
            android:title="@string/share"/>
    </group>
</menu>